modif du dossier fratrie avec les fichiers dynamiques convertis en statiques html css js

--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
-<?php get_header(); ?>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fratrie : Le compagnon des petits pour découvrir le spectacle
+        mis en scène par la Compagnie du Réfectoire</title>
+    <meta description>
+
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/main.css">
+</head>
+<body>
 
     <div class="header-container">
         <header class="wrapper">
@@ -262,4 +274,6 @@
         </article>
     </div>
 
-<?php get_footer(); ?>
+<!-- Vous pouvez ajouter votre script Google Analytics ici -->
+</body>
+</html>
