conversion des fichiers tif, reduction taille image et conversion en format jpg pour les photos et png pour les icones dessinées

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         mis en scène par la Compagnie du Réfectoire</title>
     <meta description>
 
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
 
