changements de fonts

--- a/fratrieModif.html
+++ b/fratrieModif.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>
-            LA REPLIQUE<br>De l'autre côté 
+            LA REPLIQUEssssssssssss<br>De l'autre côté 
         </h1>
 
         <!-- 
