supp des font kurale et josefin et ajout de police d'Emilie bookos

--- a/index.html
+++ b/index.html
@@ -10,31 +10,30 @@
 
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/main.css">
+   
 </head>
 
 <body>
 
     <div class="header-container">
         <header class="header">
-            <div class="container">
-                <h1 class="title">La réplique</h1>
+            <h1 class="title">La réplique</h1>
+            <nav class="nav-primary">
                 <p class="h1-subtitle">De l'autre côté...</p>
-                <nav>
-                    <ul class="nav-content">
-                        <li><a href="#">de la création</a></li>
-                        <li><a href="#">des coulisses</a></li>
-                        <li><a href="#">des trésors</a></li>
-                        <li><a href="#">des visages & des voix</a></li>
-                        <li><a href="#">contact</a></li>
-                    </ul>
-                </nav>
-            </div>
+                <ul class="nav-content">
+                    <li><a href="#first">de la création</a></li>
+                    <li><a href="#second">des coulisses</a></li>
+                    <li><a href="#third">des trésors</a></li>
+                    <li><a href="#four">des visages & des voix</a></li>
+                    <li><a href="#five">contact</a></li>
+                </ul>
+            </nav>
         </header>
     </div>
 
     <div class="main-container">
         <article class="main wrapper">
-            <section class="first-content">
+            <section class="first-content" id="first">
                 <div class="container">
                     <h2>De l'autre côté... de la création</h2>
                     <p class="h2-subtitle"></p>
@@ -127,7 +126,7 @@
                 </div>
             </section>
 
-            <section class="second-content">
+            <section class="second-content" id="second">
                 <div class="container">
                     <h2>De l'autre côté... des coulisses</h2>
                     <p class="h2-subtitle"></p>
@@ -140,7 +139,7 @@
                 </div>
             </section>
 
-            <section class="third-content">
+            <section class="third-content" id="third">
                 <div class="container">
                     <h2>De l'autre côté... des trésors</h2>
                     <p class="h2-subtitle"></p>
@@ -205,7 +204,7 @@
                 </div>
             </section>
 
-            <section class="fourth-content">
+            <section class="fourth-content" id="four">
                 <div class="container">
                     <h2>De l'autre côté... des visages et des voix</h2>
                     <p class="h2-subtitle"></p>
@@ -335,7 +334,7 @@
                 </div>
             </section>
 
-            <section class="sixth-content">
+            <section class="sixth-content" id="five">
                 <div class="container">
                     <h2>Contact</h2>
                     <p class="h2-subtitle"></p>
