ajout des logo et du style de la section cinq en savoir plus

--- a/index.html
+++ b/index.html
@@ -439,15 +439,15 @@
                 <div class="container">
                     <h2>En savoir plus</h2>
                     <p class="h2-subtitle"></p>
-                    <ul class="fourth-content-element">
+                    <ul class="fifth-content-element">
                         <li>
-                            <a class="fourth-content-element-title">En savoir plus sur la Compagnie du Réfectoire
-                                <img src="" alt="">
+                            <a class="fifth-content-element-title">En savoir plus sur la Compagnie du Réfectoire
+                                <img src="assets/img/5.about/logo_cieRefectoire.png" alt="">
                             </a>
                         </li>
                         <li>
-                            <a class="fourth-content-element-title">En savoir plus sur le labo des cultures
-                                <img src="" alt="">
+                            <a class="fifth-content-element-title">En savoir plus sur le labo des cultures
+                                <img src="assets/img/5.about/logoLaboDesCultures.png" alt="">
                             </a>
                         </li>
                     </ul>
