modif du style css de la partie equipe et en savoir +

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                                 <div class="card__face card__face--front">
                                 </div>
                                 <div class="card__face card__face--back">
-                                    <audio controls src="assets/medias/tresors/1 - Pierre joue dans sa chambre.mp3"></audio> 
+                                    <p>Pour te faire jouer, pour t’amuser, pour que tu te poses des questions et pour que tu rêves, nous  avons  créé  un  objet  curieux,  un  grand  pliage  où  plein  de  surprises  se  cachent... <br><br> Nous  avons travaillé  pour  créer  un  lien  entre  le  spectacle  et  toi.  Cet  objet  qu’on  appelle  «la  réplique»  est  à  toi alors fais-en ce qu’il te plait ! </p>
                                 </div>
                             </div>
                         </div>
@@ -280,9 +280,7 @@
                                 <div class="card__face card__face--front">
                                 </div>
                                 <div class="card__face card__face--back">
-                                    <audio controls>
-                                      <source src="assets/medias/tresors/1 - Pierre joue dans sa chambre.mp3" type="audio/mp3">
-                                    </audio> 
+                                    <img src="assets/img/3.tresor/6.rideauPluie_small.jpg" alt=""> 
                                 </div>
                             </div>
                         </div>
@@ -292,7 +290,7 @@
                                 <div class="card__face card__face--front">
                                 </div>
                                 <div class="card__face card__face--back">
-                                  <audio controls src="assets/medias/tresors/1 - Pierre joue dans sa chambre.mp3"></audio> 
+                                  <img src="assets/img/3.tresor/7.renardyeux_small.png" alt="">
                                 </div>
                             </div>
                         </div>
@@ -312,7 +310,7 @@
                                 <div class="card__face card__face--front">
                                 </div>
                                 <div class="card__face card__face--back">
-                                    <img src="assets/img/3.tresor/4.boiteTresor_small.jpg" alt=""> 
+                                    <img src="assets/img/3.tresor/5.decor_small.jpg" alt=""> 
                                 </div>
                             </div>
                         </div>
@@ -337,14 +335,13 @@
                                 <div class="card__face card__face--front">
                                 </div>
                                 <div class="card__face card__face--back">
-                                    <p>OGDOG. — Quand la pluie touche le sol, pile, elle se transforme en billes.
-                                    <br>PIERRE. — Non, en flaques.
-                                    <br>OGDOG. — Non, en billes!
-                                    <br>PIERRE. — Pourquoi je l’ai jamais vu, alors?
-                                    <br>OGDOG. — Parce qu’elles s’éparpillent très très vite. Viens! 
-                                    </p>
+                                    <img src="assets/img/3.tresor/4.boiteTresor_small.jpg" alt="">
                                 </div>
                             </div>
+                        </div>
+                        
+                        <div class="card-surprise-box">
+                            <div class="card-surprise"></div>
                         </div>
                     </div> 
                 </div>
@@ -360,104 +357,122 @@
                        
                         <li class="fourth-content-element-item">
                             <img src="assets/img/4.equipe/nb-bg/Adeline_small.jpg" alt="">
+                            <div class="fourth-content-element-item-group">
                             <h3 class="fourth-content-element-name">Adeline</h3>
-                            <figure>
-                                <figcaption>Est-ce que tu as peur du noir &nbsp;?</figcaption>
-                                <audio controls src="assets/medias/equipe/adeline.mp3">
-                                    Your browser does not support the
-                                    <code>audio</code> element.
-                                </audio>
-                            </figure>
+                                <figure>
+                                    <figcaption>Est-ce que tu as peur du noir &nbsp;?</figcaption>
+                                    <audio controls src="assets/medias/equipe/adeline.mp3">
+                                        Your browser does not support the
+                                        <code>audio</code> element.
+                                    </audio>
+                                </figure>
+                            </div>
                         </li>
                         <li class="fourth-content-element-item">
                             <img src="assets/img/4.equipe/nb-bg/camille_small.jpg" alt="">
-                            <h3 class="fourth-content-element-name">Camille</h3>
-                            <figure>
-                                <figcaption>Comment conserves-tu tes souvenirs&nbsp;?</figcaption>
-                                <audio controls src="assets/medias/equipe/camille.mp3">
-                                    Your browser does not support the
-                                    <code>audio</code> element.
-                                </audio>
-                            </figure>
+                            <div class="fourth-content-element-item-group">
+                                <h3 class="fourth-content-element-name">Camille</h3>
+                                <figure>
+                                    <figcaption>Comment conserves-tu tes souvenirs&nbsp;?</figcaption>
+                                    <audio controls src="assets/medias/equipe/camille.mp3">
+                                        Your browser does not support the
+                                        <code>audio</code> element.
+                                    </audio>
+                                </figure>
+                            </div>
                         </li>
 
                         <li class="fourth-content-element-item">
                             <img src="assets/img/4.equipe/nb-bg/christine_small.jpg" alt="">
-                            <h3 class="fourth-content-element-name">Christine</h3>
-                            <figure>
-                                <figcaption>Comment as-tu pensé les décors du spectacle&nbsp;?</figcaption>
-                                <audio controls src="assets/medias/equipe/christine.mp3">
-                                    Your browser does not support the
-                                    <code>audio</code> element.
-                                </audio>
-                            </figure>
+                            <div class="fourth-content-element-item-group">
+                                <h3 class="fourth-content-element-name">Christine</h3>
+                                <figure>
+                                    <figcaption>Comment as-tu pensé les décors du spectacle&nbsp;?</figcaption>
+                                    <audio controls src="assets/medias/equipe/christine.mp3">
+                                        Your browser does not support the
+                                        <code>audio</code> element.
+                                    </audio>
+                                </figure>
+                            </div>
                         </li>
                         <li class="fourth-content-element-item">
                             <img src="assets/img/4.equipe/nb-bg/emilie_small.jpg" alt="">
-                            <h3 class="fourth-content-element-name">Emilie</h3>
-                            <figure>
-                                <figcaption>As-tu souvent été en forêt&nbsp;?</figcaption>
-                                <audio controls src="assets/medias/equipe/emilie.mp3">
-                                    Your browser does not support the
-                                    <code>audio</code> element.
-                                </audio>
-                            </figure>
+                            <div class="fourth-content-element-item-group">
+                                <h3 class="fourth-content-element-name">Emilie</h3>
+                                <figure>
+                                    <figcaption>As-tu souvent été en forêt&nbsp;?</figcaption>
+                                    <audio controls src="assets/medias/equipe/emilie.mp3">
+                                        Your browser does not support the
+                                        <code>audio</code> element.
+                                    </audio>
+                                </figure>
+                            </div>
                         </li>
                         <li class="fourth-content-element-item">
                             <img src="assets/img/4.equipe/nb-bg/Julie_small.jpg" alt="">
-                            <h3 class="fourth-content-element-name">Julie</h3>
-                            <figure>
-                                <figcaption>
-                                    Crois-tu aux pouvoirs magiques&nbsp;?</figcaption>
-                                <audio controls src="assets/medias/equipe/julie.mp3">
-                                    Your browser does not support the
-                                    <code>audio</code> element.
-                                </audio>
-                            </figure>
+                            <div class="fourth-content-element-item-group">
+                                <h3 class="fourth-content-element-name">Julie</h3>
+                                <figure>
+                                    <figcaption>
+                                        Crois-tu aux pouvoirs magiques&nbsp;?</figcaption>
+                                    <audio controls src="assets/medias/equipe/julie.mp3">
+                                        Your browser does not support the
+                                        <code>audio</code> element.
+                                    </audio>
+                                </figure>
+                            </div>
                         </li>
                         <li class="fourth-content-element-item">
                             <img src="assets/img/4.equipe/nb-bg/lucas_small.jpg" alt="">
-                            <h3 class="fourth-content-element-name">Lucas</h3>
-                            <figure>
-                                <figcaption>Est-ce que tu pensais avoir un super-pouvoir&nbsp;?</figcaption>
-                                <audio controls src="assets/medias/equipe/lucas.mp3">
-                                    Your browser does not support the
-                                    <code>audio</code> element.
-                                </audio>
-                            </figure>
+                            <div class="fourth-content-element-item-group">
+                                <h3 class="fourth-content-element-name">Lucas</h3>
+                                <figure>
+                                    <figcaption>Est-ce que tu pensais avoir un super-pouvoir&nbsp;?</figcaption>
+                                    <audio controls src="assets/medias/equipe/lucas.mp3">
+                                        Your browser does not support the
+                                        <code>audio</code> element.
+                                    </audio>
+                                </figure>
+                            </div>
                         </li>
                         <li class="fourth-content-element-item">
                             <img src="assets/img/4.equipe/nb-bg/KarinToriNB_small.jpg" alt="">
-                            <h3 class="fourth-content-element-name">Karine</h3>
-                            <figure>
-                                <figcaption>Pourquoi écrire est un super-pouvoir&nbsp;?</figcaption>
-                                <audio controls src="assets/medias/equipe/">
-                                    Your browser does not support the
-                                    <code>audio</code> element.
-                                </audio>
-                            </figure>
+                            <div class="fourth-content-element-item-group">
+                                <h3 class="fourth-content-element-name">Karine</h3>
+                                <figure>
+                                    <figcaption>Pourquoi écrire est un super-pouvoir&nbsp;?</figcaption>
+                                    <audio controls src="assets/medias/equipe/">
+                                        Your browser does not support the
+                                        <code>audio</code> element.
+                                    </audio>
+                                </figure>
+                            </div>
                         </li>
                         <li class="fourth-content-element-item">
                             <img src="assets/img/4.equipe/nb-bg/marc_small.jpg" alt="">
-                            <h3 class="fourth-content-element-name">Marc</h3>
-                            <figure>
-                                <figcaption>Comment as-tu composé les musiques du spectacle&nbsp;?</figcaption>
-                                <audio controls src="assets/medias/equipe/marc.mp3">
-                                    Your browser does not support the
-                                    <code>audio</code> element.
-                                </audio>
-                            </figure>
+                            <div class="fourth-content-element-item-group">
+                                <h3 class="fourth-content-element-name">Marc</h3>
+                                <figure>
+                                    <figcaption>Comment as-tu composé les musiques du spectacle&nbsp;?</figcaption>
+                                    <audio controls src="assets/medias/equipe/marc.mp3">
+                                        Your browser does not support the
+                                        <code>audio</code> element.
+                                    </audio>
+                                </figure>
+                            </div>
                         </li>
                         <li class="fourth-content-element-item">
                             <img src="assets/img/4.equipe/nb-bg/patrick_small.jpg" alt="">
-                            <h3 class="fourth-content-element-name">Patrick</h3>
-                            <figure>
-                                <figcaption>Quel est le rôle de la lumière dans un spectacle ?</figcaption>
-                                <audio controls src="assets/medias/equipe/marc.mp3">
-                                    Your browser does not support the
-                                    <code>audio</code> element.
-                                </audio>
-                            </figure>
+                            <div class="fourth-content-element-item-group">
+                                <h3 class="fourth-content-element-name">Patrick</h3>
+                                <figure>
+                                    <figcaption>Quel est le rôle de la lumière dans un spectacle ?</figcaption>
+                                    <audio controls src="assets/medias/equipe/marc.mp3">
+                                        Your browser does not support the
+                                        <code>audio</code> element.
+                                    </audio>
+                                </figure>
+                            </div>
                         </li>
                     </ul>
                     <p class="fourth-content-element-name">Et de  nombreuses personnes en coulisses : Josselin Tessier, Isabelle Vialard, Nicolas Geneste, Virginie Pateyron, Camille Schaefer …</p>
