modif de couleur de la navbar et font-size

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 </head>
 
 <body>
-<div id="GrandeIntro"><h1>La réplique</h1></div>
+<div class="divIntro">
+    <h1 id="GrandeIntro">La réplique</h1>
+</div>
 <div id="siteWrapper">
    
     <header class="header">
@@ -341,7 +343,9 @@
                         </div>
                         
                         <div class="card-surprise-box">
-                            <div class="card-surprise"></div>
+                            <div class="card-surprise">
+                                <video controls src="assets/medias/tresors/repliqueGif.mp4"></video>
+                            </div>
                         </div>
                     </div> 
                 </div>
