amelioration du css avec des effets sur les boutons et les liens

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div id="siteWrapper">
    
     <header class="header">
-        <div id="headerTop"><p class="h1-subtitle">De l'autre côté...</p>
+        <div id="headerTop"><a href="#first" aria-current="page"><p class="h1-subtitle">De l'autre côté...</p></a>
           <ul class="nav-content">
             <li><a href="#first" aria-current="page">de la création</a></li>
             <li><a href="#second">des coulisses</a></li>
@@ -354,6 +354,7 @@
                                     </div>
                                 </div>
                             </div>
+
                             <div class="card-surprise-box">
                                 <div class="card-surprise">
                                 </div>
@@ -504,12 +505,15 @@
                         <p class="h2-subtitle"></p>
                         <ul class="fifth-content-element">
                             <li>
-                                <a class="fifth-content-element-title" href="">En savoir plus sur la Compagnie du Réfectoire
+                                <a class="fifth-content-element-btn" href="https://www.compagnie-du-refectoire.com/" target="_blank">la Compagnie du Réfectoire</a>
+                                <a href="https://www.compagnie-du-refectoire.com/" target="_blank">
                                     <img src="assets/img/5.about/logo_cieRefectoire.png" alt="">
                                 </a>
                             </li>
                             <li>
-                                <a class="fifth-content-element-title" href="www.lelabodescultures.com">En savoir plus sur le labo des cultures
+                                <a class="fifth-content-element-btn" href="www.lelabodescultures.com" target="_blank">le labo des cultures
+                                </a>
+                                <a href="www.lelabodescultures.com" target="_blank"></a>
                                     <img src="assets/img/5.about/logoLaboDesCultures.png" alt="">
                                 </a>
                             </li>
